Fix logos size and alignment for mobile devices

--- a/styles/pages/projects.css
+++ b/styles/pages/projects.css
@@ -46,6 +46,7 @@
   display: flex;
   direction: row;
   margin: 12px 0px 26px 0px;
+  gap: 20px;
 }
 
 .project-title {
